...
      <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
        <LinearLayout
          android:id="@+id/search_results_container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/search_edit_text_height"
          android:paddingBottom="@dimen/ad_banner_height"
          android:paddingStart="@dimen/page_padding"
          android:paddingEnd="@dimen/page_padding"
          android:orientation="vertical"/>
        
      </ScrollView>
  
  
      <FrameLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/page_padding"
        android:paddingEnd="@dimen/page_padding">
        
        <LinearLayout
...
          android:paddingEnd="5dp"
          android:orientation="horizontal"
          android:background="@drawable/bg_search_edit_text"
          android:gravity="center_vertical">
          
          <ImageView
            android:id="@+id/search_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/search_button_padding"
            android:background="@drawable/bg_clean_search_button"
            app:srcCompat="@drawable/search"/>
  
          <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/search_edit_text_height"
            android:hint="@string/search"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
  
          <ImageView
            android:id="@+id/clear_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/search_button_padding"
            android:background="@drawable/bg_clean_search_button"
            app:srcCompat="@drawable/close"/>

...
